--- a/搬运代码.md
+++ b/搬运代码.md
@@ -789,9 +789,9 @@ public String ReadTxtFile(String strFilePath)
 ##百度SDK
 ## #百度sdk初始化
 androidStudio查看sha1
-![Alt text](https://app.yinxiang.com/shard/s41/res/dd8bb53c-9653-4530-90d5-934fbef7146e)
+![Alt text](./images/1480416850210)
 百度地图官网申请appkey
-![Alt text](https://app.yinxiang.com/shard/s41/res/c1fb69cd-bf32-4a93-a3b6-1873788c543c)
+![Alt text](./images/1480416877418)
 其中test2的appkey为我电脑的（每台电脑不同）
 下载SDK
 http://wiki.lbsyun.baidu.com/cms/androidsdk/all/v4.1.1/BaiduMap_AndroidSDK_v4.1.1_All.zip
