--- a/搬运代码.md
+++ b/搬运代码.md
@@ -1,5 +1,6 @@
-#framelayout»òviewPager+µ¼º½À¸
-##framelayout+µ¼º½À¸
+[TOC]
+#framelayoutæˆ–viewPager+å¯¼èˆªæ 
+##framelayout+å¯¼èˆªæ 
 ```
     private Fragment fragment1=new ContactsFragment();
     private Fragment fragment2=new ContactsFragment();
@@ -30,9 +31,9 @@
     }
     private void initButtonNavigationBar(){
         mBottomNavigationBar
-                .addItem(new BottomNavigationItem(R.drawable.ic_profile_answer, "»á»°"))
-                .addItem(new BottomNavigationItem(R.drawable.ic_profile_article, "Í¨Ñ¶Â¼"))
-                .addItem(new BottomNavigationItem(R.drawable.ic_profile_column, "ÉèÖÃ"))
+                .addItem(new BottomNavigationItem(R.drawable.ic_profile_answer, "ä¼šè¯"))
+                .addItem(new BottomNavigationItem(R.drawable.ic_profile_article, "é€šè®¯å½•"))
+                .addItem(new BottomNavigationItem(R.drawable.ic_profile_column, "è®¾ç½®"))
                 .setActiveColor(R.color.colorAccent)
                 .setMode(BottomNavigationBar.MODE_FIXED)
                 .setTabSelectedListener(new BottomNavigationBar.OnTabSelectedListener() {
@@ -50,7 +51,7 @@
                 .initialise();
     }
 ```
-##viewPager+µ¼º½À¸
+##viewPager+å¯¼èˆªæ 
 ```
 private class ViewPagerAdapter extends FragmentStatePagerAdapter {
         public ViewPagerAdapter(FragmentManager fm) {
@@ -100,9 +101,9 @@ mViewPager.setOnPageChangeListener(new ViewPager.OnPageChangeListener() {
     }
     private void initButtonNavigationBar(){
         mBottomNavigationBar
-                .addItem(new BottomNavigationItem(R.drawable.ic_profile_answer, "»á»°"))
-                .addItem(new BottomNavigationItem(R.drawable.ic_profile_article, "Í¨Ñ¶Â¼"))
-                .addItem(new BottomNavigationItem(R.drawable.ic_profile_column, "ÉèÖÃ"))
+                .addItem(new BottomNavigationItem(R.drawable.ic_profile_answer, "ä¼šè¯"))
+                .addItem(new BottomNavigationItem(R.drawable.ic_profile_article, "é€šè®¯å½•"))
+                .addItem(new BottomNavigationItem(R.drawable.ic_profile_column, "è®¾ç½®"))
                 .setActiveColor(R.color.colorAccent)
                 .setMode(BottomNavigationBar.MODE_FIXED)
                 .setTabSelectedListener(new BottomNavigationBar.OnTabSelectedListener() {
@@ -120,14 +121,14 @@ mViewPager.setOnPageChangeListener(new ViewPager.OnPageChangeListener() {
                 .initialise();
     }
 ```
-³õÊ¼»¯    
+åˆå§‹åŒ–    
 ```
         initFrameLayout();
         //initViewPager();
         initButtonNavigationBar();
 ```
-²¢ÇÒÌæ»» list_fragment
-ÇĞ»»Ê±        showFragment(position);
+å¹¶ä¸”æ›¿æ¢ list_fragment
+åˆ‡æ¢æ—¶        showFragment(position);
 #RecycleView
 ##MyRecyclerViewAdapter
 ```
@@ -208,15 +209,15 @@ public class MyRecyclerViewHolder extends RecyclerView.ViewHolder {
     private void initRecycleView() {
         adapter = new MyRecyclerViewAdapter(this, allSongs);
         mRecyclerView.setLayoutManager(new LinearLayoutManager(this));
-        //×Ô¶¯»¬¶¯µ½×îµÍ,¸üĞÂListÊ±ĞèÒªĞ´Ò»´Î
+        //è‡ªåŠ¨æ»‘åŠ¨åˆ°æœ€ä½,æ›´æ–°Listæ—¶éœ€è¦å†™ä¸€æ¬¡
         mRecyclerView.setAdapter(adapter);
         //adapter.notifyDataSetChanged();
         //mRecyclerView.smoothScrollToPosition(adapter.getItemCount());
     }
 ```
-recycleView¼ÓÔØÊ±ÓÉÓÚRecyclerView.Adapter»á×Ô¶¯»ØÊÕviewholder,ËùÒÔ´æÔÚBUG£¬µ¼ÖÂviewholder¸´ÓÃ,ËùÒÔÇëÃ¿´ÎµÄonBindViewHolderÖĞviewholderÒªÉèÖÃÍêÕû
-recycleViewµÄadapterÖ¸¶¨µÄlist±ØĞëÊÇÍ¬Ò»¸ölist,¼´µØÖ·Ò»ÖÂ,·ñÔò»áÔì³ÉÊı¾İ²»Ë¢ĞÂ,Èç¹û·ÇÒª²»Í¬List,Çënew Ò»¸öadapter;
-#ÉÏÏÂÎÄ²Ëµ¥ÓëÑ¡Ïî²Ëµ¥
+recycleViewåŠ è½½æ—¶ç”±äºRecyclerView.Adapterä¼šè‡ªåŠ¨å›æ”¶viewholder,æ‰€ä»¥å­˜åœ¨BUGï¼Œå¯¼è‡´viewholderå¤ç”¨,æ‰€ä»¥è¯·æ¯æ¬¡çš„onBindViewHolderä¸­viewholderè¦è®¾ç½®å®Œæ•´
+recycleViewçš„adapteræŒ‡å®šçš„listå¿…é¡»æ˜¯åŒä¸€ä¸ªlist,å³åœ°å€ä¸€è‡´,å¦åˆ™ä¼šé€ æˆæ•°æ®ä¸åˆ·æ–°,å¦‚æœéè¦ä¸åŒList,è¯·new ä¸€ä¸ªadapter;
+#ä¸Šä¸‹æ–‡èœå•ä¸é€‰é¡¹èœå•
 ```
     menu.xml:
 <?xml version="1.0" encoding="utf-8"?>
@@ -225,7 +226,7 @@ recycleViewµÄadapterÖ¸¶¨µÄlist±ØĞëÊÇÍ¬Ò»¸ölist,¼´µØÖ·Ò»ÖÂ,·ñÔò»áÔì³ÉÊı¾İ²»Ë¢ĞÂ,È
     <item android:title="2"/>
 </menu>
 ```
-##Ñ¡Ïî²Ëµ¥:
+##é€‰é¡¹èœå•:
 ```
 Override
     public boolean onCreateOptionsMenu(Menu menu) {
@@ -233,9 +234,9 @@ Override
         return super.onCreateOptionsMenu(menu);
     }
 ```
-##ÉÏÏÂÎÄ²Ëµ¥:
+##ä¸Šä¸‹æ–‡èœå•:
 ```
-//°´ÏÂ°´Å¥ºóÏÔÊ¾ÉÏÏÂÎÄ²Ëµ¥(Î´ÊµÏÖ)
+//æŒ‰ä¸‹æŒ‰é’®åæ˜¾ç¤ºä¸Šä¸‹æ–‡èœå•(æœªå®ç°)
 Override
     public void onCreateContextMenu(ContextMenu menu, View v, ContextMenu.ContextMenuInfo menuInfo) {
         getMenuInflater().inflate(R.menu.menu_main,menu);
@@ -249,8 +250,8 @@ mButton.setOnClickListener(new View.OnClickListener() {
             }
         });
 ```
-#ÍøÂçÍ¨ĞÅ
-##ºèÑó´óÉñµÄokhttp·â×°
+#ç½‘ç»œé€šä¿¡
+##é¸¿æ´‹å¤§ç¥çš„okhttpå°è£…
 https://github.com/hongyangAndroid/okhttputils
 compile 'com.zhy:okhttputils:2.6.2'
 ###get
@@ -260,7 +261,7 @@ private void get(){
                 .get()
                 .url("http://apis.baidu.com/apistore/weatherservice/citylist")
                 .addHeader("apikey","592e46b62cfe201c68bf7d9f18db11ee")
-                .addParams("cityname", "³¯Ñô")
+                .addParams("cityname", "æœé˜³")
                 .build()
                 .execute(new StringCallback()
                 {
@@ -276,7 +277,7 @@ private void get(){
                 });
     }
 ```
-//getÇëÇóÖĞaddParamsÊÇ½«²ÎÊı·Åµ½URL Parameter Key;postÇëÇóÊÇ·Åµ½Body Parameter KeyËÆºõ²»ÄÜ·Åµ½URLÖĞ
+//getè¯·æ±‚ä¸­addParamsæ˜¯å°†å‚æ•°æ”¾åˆ°URL Parameter Key;postè¯·æ±‚æ˜¯æ”¾åˆ°Body Parameter Keyä¼¼ä¹ä¸èƒ½æ”¾åˆ°URLä¸­
 ###post
 ```
 private void post(){
@@ -293,7 +294,7 @@ private void post(){
                     }
                     @Override
                     public void onResponse(String response, int id) {
-                        //response=[{"name":"Ó¢ÓïËÄÁù¼¶(ÍÆ¼ö)","progress":"1"},{"name":"¼İÕÕ","progress":"0"},{"name":"ÆÕÍ¨»°","progress":"0"},{"name":"¶ş¼¶cÓïÑÔ","progress":"0"},{"name":"Èı¼¶Êı¾İ¿â","progress":"0"}]
+                        //response=[{"name":"è‹±è¯­å››å…­çº§(æ¨è)","progress":"1"},{"name":"é©¾ç…§","progress":"0"},{"name":"æ™®é€šè¯","progress":"0"},{"name":"äºŒçº§cè¯­è¨€","progress":"0"},{"name":"ä¸‰çº§æ•°æ®åº“","progress":"0"}]
                         List<Plan_zong> plan_zongs=new Gson().fromJson(response,new TypeToken<List<Plan_zong>>() {}.getType());
                         Log.i("Plan_zongs=","--------------------Plan_zongs--------------------");
                         for (Plan_zong plan_zong:plan_zongs){
@@ -307,7 +308,7 @@ private void post(){
                 });
     }
 ```
-###post·¢ËÍjson
+###postå‘é€json
 ```
 private void post_json(){
         Plan_zong plan_zong=new Plan_zong();
@@ -332,7 +333,7 @@ private void post_json(){
                 });
     }
 ```
-###post·¢ËÍÍ¼Æ¬/ÎÄ¼ş+½ø¶ÈÌõ
+###postå‘é€å›¾ç‰‡/æ–‡ä»¶+è¿›åº¦æ¡
 ```
  private void post_file(){
         byte[] bitmap_bytes=BitmapUtil.bitmapToByte(BitmapFactory.decodeResource(getResources(),R.drawable.bt_search_branch));
@@ -366,14 +367,14 @@ private void post_json(){
         }
     }
 ```
-###ÏÂÔØÎÄ¼ş
+###ä¸‹è½½æ–‡ä»¶
 ```
 private void downloadFile(){
         OkHttpUtils//
                 .get()//
-                .url("http://sw.bos.baidu.com/sw-search-sp/software/e6207d37846ba/QQ_8.7.19113.0_setup.exe")//ÏÂÔØÒ³
+                .url("http://sw.bos.baidu.com/sw-search-sp/software/e6207d37846ba/QQ_8.7.19113.0_setup.exe")//ä¸‹è½½é¡µ
                 .build()//
-                .execute(new FileCallBack(Environment.getExternalStorageDirectory().getAbsolutePath(), "gson-2.2.1.jar")//ÏÂÔØÎÄ¼şÂ·¾¶,ÎÄ¼şÃû
+                .execute(new FileCallBack(Environment.getExternalStorageDirectory().getAbsolutePath(), "gson-2.2.1.jar")//ä¸‹è½½æ–‡ä»¶è·¯å¾„,æ–‡ä»¶å
                 {
                     @Override
                     public void inProgress(float progress, long total, int id) {
@@ -396,14 +397,14 @@ private void downloadFile(){
 ##Gson
 http://www.jianshu.com/p/e740196225a4
 http://blog.csdn.net/axuanqq/article/details/51441590
-###Gson½«json×ªÀà
+###Gsonå°†jsonè½¬ç±»
 ```
 //log={"name":"cai","progress":"1"}
 Plan_zong plan_zong2=new Gson().fromJson(log, Plan_zong.class);
         Log.i("Gson","name="+plan_zong2.getName());
         Log.i("Gson","progress="+plan_zong2.getProgress());
 ```
-###Gson½«Àà×ªÎªJson
+###Gsonå°†ç±»è½¬ä¸ºJson
 ```
 Plan_zong plan_zong=new Plan_zong();
         plan_zong.setName("cai");
@@ -411,9 +412,9 @@ Plan_zong plan_zong=new Plan_zong();
         String log=new Gson().toJson(plan_zong);
         Log.i("Gson",log);
 ```
-###Gson½«JsonArray×ªÎªÀàµÄList
+###Gsonå°†JsonArrayè½¬ä¸ºç±»çš„List
 ```
-//response=[{"name":"Ó¢ÓïËÄÁù¼¶(ÍÆ¼ö)","progress":"1"},{"name":"¼İÕÕ","progress":"0"},{"name":"ÆÕÍ¨»°","progress":"0"},{"name":"¶ş¼¶cÓïÑÔ","progress":"0"},{"name":"Èı¼¶Êı¾İ¿â","progress":"0"}]
+//response=[{"name":"è‹±è¯­å››å…­çº§(æ¨è)","progress":"1"},{"name":"é©¾ç…§","progress":"0"},{"name":"æ™®é€šè¯","progress":"0"},{"name":"äºŒçº§cè¯­è¨€","progress":"0"},{"name":"ä¸‰çº§æ•°æ®åº“","progress":"0"}]
                         List<Plan_zong> plan_zongs=new Gson().fromJson(response,new TypeToken<List<Plan_zong>>() {}.getType());
                         Log.i("Plan_zongs=","--------------------Plan_zongs--------------------");
                         for (Plan_zong plan_zong:plan_zongs){
@@ -422,15 +423,15 @@ Plan_zong plan_zong=new Plan_zong();
                         }
                         Log.i("Plan_zongs=","--------------------Plan_zongs--------------------");
 ```
-###Gson½«List×ªJsonArray
+###Gsonå°†Listè½¬JsonArray
 ```
 new Gson().toJson(plan_zongs)
 ```
-###Glide¼ÓÔØÍ¼Æ¬
+###GlideåŠ è½½å›¾ç‰‡
 ```
 Glide.with(activity).load(listImage.get(0)).placeholder(R.drawable.account_avatar).into(holder.imageView);
 ```
-ÉÏÃæÕâÖÖ·½Ê½intoÀïµÄimageView²»ÄÜÉèÖÃÎª¹Ì¶¨´óĞ¡£¬Èç¹ûÒªÓÃÊ¹ÓÃÏÂÃæ´úÂë
+ä¸Šé¢è¿™ç§æ–¹å¼intoé‡Œçš„imageViewä¸èƒ½è®¾ç½®ä¸ºå›ºå®šå¤§å°ï¼Œå¦‚æœè¦ç”¨ä½¿ç”¨ä¸‹é¢ä»£ç 
 ```
 Glide.with(activity).load(listImage.get(0)).placeholder(R.drawable.account_avatar).into(
                     new SimpleTarget<GlideDrawable>() {
@@ -440,8 +441,8 @@ Glide.with(activity).load(listImage.get(0)).placeholder(R.drawable.account_avata
                         }
             });
 ```
-#Êı¾İ´æ´¢Óë¶ÁÈ¡
-##ÊÖ»úÄÚ²¿Êı¾İ¿â(sqlite)
+#æ•°æ®å­˜å‚¨ä¸è¯»å–
+##æ‰‹æœºå†…éƒ¨æ•°æ®åº“(sqlite)
 ```
 initSqlLite();
         queryData_sqlite();
@@ -474,35 +475,35 @@ private void initView() {
     private void initRecycleView() {
         adapter = new MyRecyclerViewAdapter(this, allPersons);
         mRecyclerView.setLayoutManager(new LinearLayoutManager(this));
-        //×Ô¶¯»¬¶¯µ½×îµÍ,¸üĞÂListÊ±ĞèÒªĞ´Ò»´Î
+        //è‡ªåŠ¨æ»‘åŠ¨åˆ°æœ€ä½,æ›´æ–°Listæ—¶éœ€è¦å†™ä¸€æ¬¡
         mRecyclerView.setAdapter(adapter);
         //adapter.notifyDataSetChanged();
         //mRecyclerView.smoothScrollToPosition(adapter.getItemCount());
     }
     private void initSqlLite() {
-        //´ò¿ª»ò´´½¨test.dbÊı¾İ¿â
+        //æ‰“å¼€æˆ–åˆ›å»ºtest.dbæ•°æ®åº“
         SQLiteDatabase db = openOrCreateDatabase("test.db", Context.MODE_PRIVATE, null);
         db.execSQL("DROP TABLE IF EXISTS person");
-        //´´½¨person±í
+        //åˆ›å»ºpersonè¡¨
         db.execSQL("CREATE TABLE person (id INTEGER PRIMARY KEY AUTOINCREMENT, name VARCHAR, age VARCHAR)");
-        //¹Ø±Õµ±Ç°Êı¾İ¿â
+        //å…³é—­å½“å‰æ•°æ®åº“
         allPersons.add(new Person());
         db.close();
     }
     private void addData_sqlite() {
         SQLiteDatabase db = openOrCreateDatabase("test.db", Context.MODE_PRIVATE, null);
         Person person = new Person();
-        person.setName("²ÌÈÙ³Ì");
+        person.setName("è”¡è£ç¨‹");
         person.setAge("22");
-        //ContentValuesÒÔ¼üÖµ¶ÔµÄĞÎÊ½´æ·ÅÊı¾İ
+        //ContentValuesä»¥é”®å€¼å¯¹çš„å½¢å¼å­˜æ”¾æ•°æ®
         ContentValues cv = new ContentValues();
         cv.put("name", person.getName());
         cv.put("age", person.getAge());
-//        //²åÈëContentValuesÖĞµÄÊı¾İ
+//        //æ’å…¥ContentValuesä¸­çš„æ•°æ®
         db.insert("person", null, cv);
         allPersons.add(person);
         adapter.notifyDataSetChanged();
-        Toast.makeText(this, "Ìí¼Ó×îºóÒ»Ïî³É¹¦", Toast.LENGTH_SHORT).show();
+        Toast.makeText(this, "æ·»åŠ æœ€åä¸€é¡¹æˆåŠŸ", Toast.LENGTH_SHORT).show();
         db.close();
     }
     private void deleteData_sqlite() {
@@ -511,21 +512,21 @@ private void initView() {
         db.delete("person", "id = ?", new String[]{String.valueOf(id)});
         allPersons.remove(id-1);
         adapter.notifyDataSetChanged();
-        Toast.makeText(this, "É¾³ı×îºóÒ»Ïî³É¹¦", Toast.LENGTH_SHORT).show();
+        Toast.makeText(this, "åˆ é™¤æœ€åä¸€é¡¹æˆåŠŸ", Toast.LENGTH_SHORT).show();
         db.close();
     }
     private void upData_sqlite() {
         SQLiteDatabase db = openOrCreateDatabase("test.db", Context.MODE_PRIVATE, null);
         ContentValues cv = new ContentValues();
         Person person = new Person();
-        person.setName("²ÌÈÙ³Ì");
+        person.setName("è”¡è£ç¨‹");
         person.setAge("0");
         cv.put("name", person.getName());
         cv.put("age", person.getAge());
         db.update("person", cv, "id = ?", new String[]{String.valueOf(adapter.getItemCount())});
         allPersons.get(adapter.getItemCount()-1).setAge("0");
         adapter.notifyDataSetChanged();
-        Toast.makeText(this, "ĞŞ¸Ä×îºóÒ»Ïî³É¹¦", Toast.LENGTH_SHORT).show();
+        Toast.makeText(this, "ä¿®æ”¹æœ€åä¸€é¡¹æˆåŠŸ", Toast.LENGTH_SHORT).show();
         db.close();
     }
     private void queryData_sqlite() {
@@ -542,9 +543,9 @@ private void initView() {
         db.close();
     }
 ```
-##ÊÖ»úÄÚ²¿Êı¾İ¿â(litepal)
+##æ‰‹æœºå†…éƒ¨æ•°æ®åº“(litepal)
 compile 'org.litepal.android:core:1.4.0'
-Ê×ÏÈÔÚapplicationÖĞ×¢²á
+é¦–å…ˆåœ¨applicationä¸­æ³¨å†Œ
 ```
 public class Application extends android.app.Application{
     @Override
@@ -558,18 +559,18 @@ public class Application extends android.app.Application{
 <application
         android:name=".Application"
 ```
-assetsÄÚ´´½¨litepal.xml:
+assetså†…åˆ›å»ºlitepal.xml:
 ```
 <?xml version="1.0" encoding="utf-8"?>
 <litepal>
     <list>
         <mapping class="com.example.administrator.ex.SqlLite.Album"></mapping>
-        //¶ÔÓ¦ÀàSong
+        //å¯¹åº”ç±»Song
         <mapping class="com.example.administrator.ex.SqlLite.Song"></mapping>
     </list>
 </litepal>
 ```
-´´½¨ÀàSong:
+åˆ›å»ºç±»Song:
 ```
 import org.litepal.annotation.Column;
 import org.litepal.crud.DataSupport;
@@ -603,13 +604,13 @@ public class Song extends DataSupport {
     }
 }
 ```
-ActivityÊ¹ÓÃ:
+Activityä½¿ç”¨:
 ```
 initData();
         queryData();
             private List<Song> allSongs=new ArrayList<>();
 private void initData() {
-        //¸ù¾İlitepal.xml³õÊ¼Êı¾İ¿âÈç¹ûÖ®Ç°´æÔÚ½«ÓÅ»¯ĞÔĞŞ¸ÄÊı¾İ¿â
+        //æ ¹æ®litepal.xmlåˆå§‹æ•°æ®åº“å¦‚æœä¹‹å‰å­˜åœ¨å°†ä¼˜åŒ–æ€§ä¿®æ”¹æ•°æ®åº“
         SQLiteDatabase db = LitePal.getDatabase();
     }
     private void addData() {
@@ -634,22 +635,22 @@ private void initData() {
     private void queryData() {
         allSongs = DataSupport.findAll(Song.class);
         List<Song> songs = DataSupport.where("name like ?", "song%").order("duration").find(Song.class);
-        //²»ºÃÓÃ£¬ÇëÖØĞ´
+        //ä¸å¥½ç”¨ï¼Œè¯·é‡å†™
         if (adapter!=null){
             adapter=null;
             initRecycleView();
         }
     }
 ```
-##androidStudio assetsÎÄ¼ş¶ÁÈ¡
+##androidStudio assetsæ–‡ä»¶è¯»å–
 ```
 public String ReadTxtFile(String strFilePath)
     {
         String path = strFilePath;
-        String content = ""; //ÎÄ¼şÄÚÈİ×Ö·û´®
-        //´ò¿ªÎÄ¼ş
+        String content = ""; //æ–‡ä»¶å†…å®¹å­—ç¬¦ä¸²
+        //æ‰“å¼€æ–‡ä»¶
         File file = new File(path);
-        //Èç¹ûpathÊÇ´«µİ¹ıÀ´µÄ²ÎÊı£¬¿ÉÒÔ×öÒ»¸ö·ÇÄ¿Â¼µÄÅĞ¶Ï
+        //å¦‚æœpathæ˜¯ä¼ é€’è¿‡æ¥çš„å‚æ•°ï¼Œå¯ä»¥åšä¸€ä¸ªéç›®å½•çš„åˆ¤æ–­
         if (file.isDirectory())
         {
             Log.d("TestFile", "The File doesn't not exist.");
@@ -664,7 +665,7 @@ public String ReadTxtFile(String strFilePath)
                     InputStreamReader inputreader = new InputStreamReader(instream);
                     BufferedReader buffreader = new BufferedReader(inputreader);
                     String line;
-                    //·ÖĞĞ¶ÁÈ¡
+                    //åˆ†è¡Œè¯»å–
                     while (( line = buffreader.readLine()) != null) {
                         content += line + "\n";
                     }
@@ -682,11 +683,11 @@ public String ReadTxtFile(String strFilePath)
         }
         return content;
     }
-Ô­±¾ÊÇ´ÓÖ¸¶¨Â·¾¶¶ÁÈ¡ÎÄ±¾£¬16.17¸ÄĞ´Îª´Óassets¶ÁÈ¡Ö¸¶¨a.json
+åŸæœ¬æ˜¯ä»æŒ‡å®šè·¯å¾„è¯»å–æ–‡æœ¬ï¼Œ16.17æ”¹å†™ä¸ºä»assetsè¯»å–æŒ‡å®ša.json
 ```
-#Í¨ÓÃ×é¼ş
+#é€šç”¨ç»„ä»¶
 ##DrawerLayout
-###DrawerLayoutÈ«²¿
+###DrawerLayoutå…¨éƒ¨
 ```
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
@@ -722,7 +723,7 @@ public String ReadTxtFile(String strFilePath)
         android:layout_gravity="start"/>
 </android.support.v4.widget.DrawerLayout>
 ```
-###DrawerLayoutÔÚÏÂÃæ
+###DrawerLayoutåœ¨ä¸‹é¢
 ```
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
@@ -764,44 +765,44 @@ public String ReadTxtFile(String strFilePath)
               android:layout_height="match_parent">
 </android.support.design.widget.CoordinatorLayout>
 ```
-##×Ô¶¨ÒåVIEW
+##è‡ªå®šä¹‰VIEW
 ```
-    //Õâ¸öÊÇ·ÅÔÚ²¼¾ÖÖĞÒª¼ÓµÄ
+    //è¿™ä¸ªæ˜¯æ”¾åœ¨å¸ƒå±€ä¸­è¦åŠ çš„
     public MyListView(Context context, AttributeSet attrs) {
         super(context, attrs);
     }
     protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
-        //Ä¬ÈÏViewÊÇÖ»Ö§³ÖEXACTLY(¾«È·´óĞ¡)»òÕßmatch
+        //é»˜è®¤Viewæ˜¯åªæ”¯æŒEXACTLY(ç²¾ç¡®å¤§å°)æˆ–è€…match
         setMeasuredDimension(measureWidth(widthMeasureSpec),measureWidth(heightMeasureSpec));
     }
-    //¿ÉÒÔ³¤¿íÖØ¹¹Á½´Î£¬ÏÖÔÚÖ»ÓĞÒ»´Î
+    //å¯ä»¥é•¿å®½é‡æ„ä¸¤æ¬¡ï¼Œç°åœ¨åªæœ‰ä¸€æ¬¡
     private int measureWidth(int widthMeasureSpec){
         int measureMode=MeasureSpec.getMode(widthMeasureSpec);
         int measureSize=MeasureSpec.getSize(widthMeasureSpec);
-        //¾«È·
+        //ç²¾ç¡®
         if (measureMode==MeasureSpec.EXACTLY)return measureSize;
-        //wrap_content ´Ó300ºÍÈİÆ÷´óĞ¡Ñ¡×îĞ¡
+        //wrap_content ä»300å’Œå®¹å™¨å¤§å°é€‰æœ€å°
         else if (measureMode==MeasureSpec.AT_MOST)return Math.min(300,measureSize);
         else return measureSize;
     }
 ```
 #SDK/API
-##°Ù¶ÈSDK
-## #°Ù¶Èsdk³õÊ¼»¯
-androidStudio²é¿´sha1
+##ç™¾åº¦SDK
+## #ç™¾åº¦sdkåˆå§‹åŒ–
+androidStudioæŸ¥çœ‹sha1
 ![Alt text](https://github.com/cai1449074828/cai/blob/master/images/1480416850210.png)
-°Ù¶ÈµØÍ¼¹ÙÍøÉêÇëappkey
+ç™¾åº¦åœ°å›¾å®˜ç½‘ç”³è¯·appkey
 ![Alt text](https://github.com/cai1449074828/cai/blob/master/images/1480416877418.png)
-ÆäÖĞtest2µÄappkeyÎªÎÒµçÄÔµÄ£¨Ã¿Ì¨µçÄÔ²»Í¬£©
-ÏÂÔØSDK
+å…¶ä¸­test2çš„appkeyä¸ºæˆ‘ç”µè„‘çš„ï¼ˆæ¯å°ç”µè„‘ä¸åŒï¼‰
+ä¸‹è½½SDK
 http://wiki.lbsyun.baidu.com/cms/androidsdk/all/v4.1.1/BaiduMap_AndroidSDK_v4.1.1_All.zip
-ÌîĞ´AppKey:
+å¡«å†™AppKey:
 ```
 <application
         android:name=".Application">
          <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="ÉêÇëµÄAppKey" />
+            android:value="ç”³è¯·çš„AppKey" />
             </application>
 ```
 application:
@@ -818,7 +819,7 @@ android {
     }
 }
 ```
-È¨ÏŞ
+æƒé™
 ```
 uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -830,7 +831,7 @@ uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 ```
-###°Ù¶ÈµØÍ¼
+###ç™¾åº¦åœ°å›¾
 layout:
 ```
 <FrameLayout
@@ -845,7 +846,7 @@ private void initMap() {
         Intent intent = getIntent();
         MapStatus.Builder builder = new MapStatus.Builder();
         if (intent.hasExtra("x") && intent.hasExtra("y")) {
-            // µ±ÓÃintent²ÎÊıÊ±£¬ÉèÖÃÖĞĞÄµãÎªÖ¸¶¨µã
+            // å½“ç”¨intentå‚æ•°æ—¶ï¼Œè®¾ç½®ä¸­å¿ƒç‚¹ä¸ºæŒ‡å®šç‚¹
             Bundle b = intent.getExtras();
             LatLng p = new LatLng(b.getDouble("y"), b.getDouble("x"));
             builder.target(p);
