修改文件: 搬运代码.md

--- a/搬运代码.md
+++ b/搬运代码.md
@@ -860,7 +860,9 @@ private void initMap() {
         manager.beginTransaction().add(R.id.map, map, "map_fragment").commit();
     }
 ```
+![enter description here][3]
 
 
   [1]: ./images/1480438421636.jpg "1480438439355.jpg"
   [2]: ./images/1480438439355.jpg "1480438421636.jpg"
+  [3]: ./images/1480440442224.jpg "1480440442224.jpg"
